[package]
name = "pixelrpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", features = ["dynamic"] }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap" }
log = "0.4"
anyhow = { version = "1.0" }
tiled = { version = "0.9", default-features = false }
env_logger = "0.9"